<?xml version="1.0" encoding="UTF-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@drawable/bg">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/entry_2"
            android:inputType="textPassword"
            android:textColor="@color/norm" >

           
        </EditText>

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/entry_3"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:background="@color/norm" 
            />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/editText2"
            android:layout_marginTop="191dp"
            android:ems="10"
            android:hint="@string/entry_1" 
            android:textColor="@color/norm"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="225dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/house"
            android:contentDescription="@string/image" />

    </RelativeLayout>
