<?xml version="1.0" encoding="UTF-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#33b5e5"
            android:contentDescription="@string/image"
           />
        
          <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/kwh_1"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/kwh_2" 
            android:textStyle="bold"
            android:textColor="#33b5e5"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/kwh_3"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="#33b5e5" />
  
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="33dp"
            android:src="@drawable/ic_menu_info_details" 
            android:contentDescription="@string/image"/>

        <ListView
            android:id="@+id/kwh_list"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginTop="10dp" >

        </ListView>
      
    </RelativeLayout>
