<?xml version="1.0" encoding="UTF-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@drawable/bg">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#33b5e5"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/room_1"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bedroom1"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_centerVertical="true"
            android:text="@string/room_2" 
            android:textColor="@color/text"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:text="@string/room_3" 
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="7dp"
            android:text="@string/room_4" 
            android:textColor="@color/text"/>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="24dp"
            android:background="#484848" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/incandescent_bulb"
                android:contentDescription="@string/image" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imageView3"
                android:alpha="0.8"
                android:background="@color/app_bottom" >
 
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                     android:textStyle="bold"
                    android:textColor="#FFFF0000" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:background="#484848" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/fan"
                android:contentDescription="@string/image" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ImageView01"
                android:alpha="0.8"
                android:background="@color/app_bottom" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                                        android:textStyle="bold"
                     android:textSize="20dp"
                    android:textColor="#FFFF0000" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_alignRight="@+id/imageView2"
            android:layout_alignTop="@+id/relativeLayout2"
            android:background="#484848" >

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ac" 
                android:contentDescription="@string/image"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ImageView02"
                android:alpha="0.8"
                android:background="@color/app_bottom" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                                        android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#FFFF0000" />
            </RelativeLayout>
        </RelativeLayout>





        <Button
            android:id="@+id/button2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="200dp"
            android:text="@string/room_5" 
            android:background="#a60607"
            android:textColor="@android:color/white"  />


        <Button
            android:id="@+id/button1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageView2"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="200dp"
            android:text="@string/room_6"
            android:background="#268307"
              android:textColor="@android:color/white"  />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout1"
            android:layout_toRightOf="@+id/textView5"
           
            android:textStyle="italic"
            android:typeface="sans"
            android:textColor="#339933"/>
 
        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TextView03"
            android:layout_alignBottom="@+id/TextView03"
            android:layout_toRightOf="@+id/TextView03"
            android:text="@string/room_7" 
            android:textColor="@color/text"/>

    </RelativeLayout>
