<?xml version="1.0" encoding="UTF-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@drawable/bg"
        >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#33b5e5"
            android:contentDescription="@string/image" />



        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/home_1"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@drawable/hall" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:alpha="0.6"
                android:background="@android:color/black" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/home_2"
                    android:textColor="@color/norm"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="124dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/relativeLayout1"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginTop="10dp"
            android:background="@drawable/bedroom1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:alpha="0.6"
                android:background="@android:color/black" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/home_3"
                    android:textColor="@color/norm"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="124dp"
            android:layout_height="80dp"
            android:layout_alignRight="@+id/relativeLayout1"
            android:layout_alignTop="@+id/relativeLayout2"
            android:background="@drawable/bedroom2" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:alpha="0.6"
                android:background="@android:color/black"
                 >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/home_3"
                    android:textColor="@color/norm"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="124dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/relativeLayout2"
            android:layout_below="@+id/relativeLayout2"
            android:layout_marginTop="5dp"
            android:background="@drawable/bath1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:alpha="0.6"
                android:background="@android:color/black" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/home_4"
                    android:textColor="@color/norm"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout6"
            android:layout_width="124dp"
            android:layout_height="80dp"
            android:layout_alignRight="@+id/relativeLayout4"
            android:layout_alignTop="@+id/relativeLayout3"
            android:background="@drawable/bath2" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:alpha="0.6"
                android:background="@android:color/black" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/home_4"
                    android:textColor="@color/norm"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/relativeLayout3"
            android:layout_below="@+id/relativeLayout3"
            android:layout_marginTop="14dp"
            android:background="@drawable/kitchen" 
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:alpha="0.6"
                android:background="@android:color/black" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/home_5"
                    android:textColor="@color/norm"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>